fix: Fix overflow issue on mobile

--- a/Frontend/src/app/three-d-view/three-d-view.component.scss
+++ b/Frontend/src/app/three-d-view/three-d-view.component.scss
@@ -1,5 +1,5 @@
 .canvas-container {
-  width: 100vw;
-  height: 100vh;
+  width: 99.3vw;
+  height: 99.3vh;
   overflow: hidden;
 }
